--- a/templates/admin_orders.html
+++ b/templates/admin_orders.html
@@ -30,7 +30,7 @@
                     <th>Total Harga</th>
                     <th>Alamat</th> <!-- Tambahkan Header Address -->
                     <th>Status</th>
-                    <th>ss</th> <!-- Kolom baru untuk Resi -->
+                    <th>Resi</th> <!-- Kolom baru untuk Resi -->
                 </tr>
             </thead>
             <tbody>
